clusters/vollminlab-cluster/mediastack/qbittorrent/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: mediastack
  labels:
    app: qbittorrent
    env: production
    category: media
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: gluetun-ctrl
      port: 8000
      targetPort: 8000
